samples/_failures_safe/1761506360_b92290_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_324a0877.c: In function ‘main’:
./samples/SAFE/__tmp_324a0877.c:151:39: error: expected ‘)’ at end of input
  151 |     if (len > 0 && input_text[len - 1]
      |        ~                              ^
      |                                       )
./samples/SAFE/__tmp_324a0877.c:151:5: error: expected declaration or statement at end of input
  151 |     if (len > 0 && input_text[len - 1]
      |     ^~
